tests/machine/x/pl/pure_global_fold.out
ERROR: /workspace/mochi/tests/machine/x/pl/pure_global_fold.pl:2:3: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/pure_global_fold.pl:8:6: Syntax error: Operator expected

